--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ dependencies = ["pdm>=2.5.2", "python-dotenv>=1.0.0"]
 dynamic = ["version"]
 
 classifiers = [
-  "Development Status :: 3 - Alpha",
-  "Programming Language :: Python :: 3",
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Python :: 3",
 ]
 
 [project.entry-points.pdm]
@@ -33,25 +33,25 @@ package-dir = "src"
 [tool.pdm.dev-dependencies]
 test = ["pytest>=6.1", "pdm[pytest]>=2.5.2", "pytest-cov>=4.0.0"]
 dev = [
-  "towncrier>=19.2",
-  "parver>=0.3",
-  "pre-commit>=3.2.2",
-  "nox>=2022.11.21",
-  "black>=23.3.0",
-  "pdm[pytest]>=2.5.2",
+    "towncrier>=19.2",
+    "parver>=0.3",
+    "pre-commit>=3.2.2",
+    "nox>=2022.11.21",
+    "black>=23.3.0",
+    "pdm[pytest]>=2.5.2",
 ]
 
 doc = ["mkdocs>=1.1", "mkdocs-material>=6.2"]
 
 [tool.pdm.scripts]
 post_install = [
-  "python",
-  "-c",
-  "import shutil, subprocess as sp; sp.check_call(['pre-commit', 'install']) if shutil.which('pre-commit') else None",
+    "python",
+    "-c",
+    "import shutil, subprocess as sp; sp.check_call(['pre-commit', 'install']) if shutil.which('pre-commit') else None",
 ]
 release = "python -m tasks.release"
 test = "nox --no-venv -s test"
-cov = "nox --no-venv -s cov"
+cov = "nox --no-venv -s cov {args}"
 doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
 lint = "pre-commit run --all-files"
 
@@ -62,14 +62,14 @@ target-version = ["py310", "py311"]
 [tool.ruff]
 line-length = 100
 select = [
-  "B",   # flake8-bugbear
-  "C4",  # flake8-comprehensions
-  "E",   # pycodestyle
-  "F",   # pyflakes
-  "PGH", # pygrep-hooks
-  "RUF", # ruff
-  "W",   # pycodestyle
-  "YTT", # flake8-2020
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "E",   # pycodestyle
+    "F",   # pyflakes
+    "PGH", # pygrep-hooks
+    "RUF", # ruff
+    "W",   # pycodestyle
+    "YTT", # flake8-2020
 ]
 extend-ignore = ["B018", "B019"]
 src = ["src"]
