--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: pdm install
       - name: Run coverage
-        run: pdm run cov
+        run: pdm run cov --cov-report=xml
       - uses: codecov/codecov-action@v3
   Testing:
     runs-on: ${{ matrix.os }}
