--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ lint = "pre-commit run --all-files"
 
 [tool.black]
 line-length = 100
-target-version = ["py310", "py311"]
+target-version = ["py38", "py39", "py310", "py311"]
 
 [tool.ruff]
 line-length = 100
