--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "pytest-cov>=4.0.0",
     "python-dotenv[cli]",
     "toml",
+    "pytype",
 ]
 
 scripts.test = "pytest {args:tests}"
