Type Checking -> Type-Checking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ on:
       - "*.md"
 
 jobs:
-  Type Checking:
+  Type-Checking:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
