--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           path: hatch-cache
           key: ${{ hashFiles('pyproject.toml') }}
       - name: Run pytype
-        run: hatch --cache-dir hatch-cache run pytype src
+        run: hatch --cache-dir hatch-cache run static:pytype src
   Coverage:
     runs-on: ubuntu-latest
     steps:
